2010-04-24  Vadim Kurland  <vadim@vk.crocodile.org>

	* PolicyCompiler_ipt.cpp (PolicyCompiler_ipt::checkForShadowingPlatformSpecific):
	fixes #1417 rule shadowing detection should recognize different rule options.
	Policy compiler for iptables takes into account rule options for modules
	limit, connlimit and hashlimit when it considers rules for rule shadowing.

	* instDialog.cpp (instDialog::show): fixed #1419: clear progress
	log display when instDialog is opened

2010-04-23  vadim  <vadim@vk.crocodile.org>

	* MangleTableCompiler_ipt.cpp (keepMangleTableRules::processNext):
	fixed #1415 "action branch that creates branch in mangle table
	should branch in FORWARD chain". Rule with "any" in src and dst
	and action Branch with option "branch in mangle table" will go
	into FORWARD chain in addition to the PREROUTING and POSTROUTING
	chains as before. Note that choice of PREROUTING or POSTROUTING
	chains depends on direction.

2010-04-23  Vadim Kurland  <vadim@vk.crocodile.org>

	* instDialog.cpp (instDialog::show): fixed #1418 "install
	checkboxes disappear from the compile/install dialog". This was a
	regression introduced when we fixed #547 ("User can open multiple
	compile/install dialogs")

	* instDialog_ui_ops.cpp (instDialog::checkIfNeedToCompile): see #1418
	Simplified algorithm that decides whether compile and install checkboxes
	should be turned on in the install/compile dialog. Now always using
	Firewall::needsCompile() and Firewall::needsInstall(), which check
	"last_modified", "last_compiled" and "last_installed" timestamps.
	Before this change, the dialog also tried to take into account how
	the dialog was started, using main toolbar or menu or context menu
	or local toolbar. This was confusing and hard to test.

	* PolicyCompiler_PrintRule.cpp (PrintRule::_printTarget): fixes #1416
	leading blank space in front of the custom action is missing.
	SF bug 2991397.

2010-04-22  vadim  <vadim@vk.crocodile.org>
